--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.1.2'
         // to auto install sdk components when building see #248
         // classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
-        classpath 'com.github.plastiv:sdk-manager-plugin:b04aea1cddf87e78db9a4372794d678f9e568c48'
+      //  classpath 'com.github.plastiv:sdk-manager-plugin:b04aea1cddf87e78db9a4372794d678f9e568c48'
 
 
         // NOTE: Do not place your application dependencies here; they belong
